theme swticher as service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-<div class="theme-{{theme}}">
+<div class="{{theme}}">
   <div class="background">
     <header class="header">
       <div class="header_container">
         <h1 class="logo">TODO</h1>
-        <button class="switcher" (click)="themeSwitch()">
+        <button class="switcher" (click)="switchTheme()">
         </button>
       </div>
     </header>
+    <app-new-task-input></app-new-task-input>
   </div>
 </div>
