--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,18 @@
       </div>
     </header>
     <app-new-task-input></app-new-task-input>
+    <section class="list">
+      <ul class="tasks_list" *ngFor="let task of tasks">
+        <app-task-item [task]="task">
+        </app-task-item>
+
+      </ul>
+    </section>
+    <div class="summary">
+      <p class="task_counter">items left</p>
+    </div>
+    <button class="clear_btn">Clear Completed</button>
+    <app-filters></app-filters>
+    <p class="text">Drag and drop to reorder list</p>
   </div>
 </div>
