--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,14 +4,27 @@
   @include setTheme($themes) {
     background-color: themed("colorBackground");
   }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100vw;
   min-height: 100vh;
+}
+
+.text {
+  @include setTheme($themes) {
+    color: themed("colorFilters");
+  }
+  font-size: 14px;
+  letter-spacing: -0.19px;
+  margin-top: 40px;
 }
 
 .header {
   @include setTheme($themes) {
     background-image: themed("backgroundImageMobile");
   }
+  width: 100%;
   height: 200px;
   padding: 48px 24px 0;
   display: flex;
@@ -42,6 +55,10 @@
 }
 
 @media (min-width: 560px) {
+  .text {
+    margin-top: 40px;
+  }
+
   .header {
     @include setTheme($themes) {
       background-image: themed("backgroundImageDesktop");
@@ -70,5 +87,83 @@
     height: 26px;
     width: 26px;
     cursor: pointer;
+  }
+}
+
+// List
+
+
+.list {
+  @include setTheme($themes) {
+    background-color: themed("colorBoxBackground");
+  }
+  width: 327px;
+  min-height: 52px;
+  padding: 0;
+  margin-top: 16px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.tasks_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+}
+
+.summary {
+  @include setTheme($themes) {
+    color: themed("colorFilters");
+  }
+  padding: 20px 20px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  letter-spacing: -0.17px;
+}
+
+.clear_btn {
+  @include setTheme($themes) {
+    color: themed("colorFilters");
+  }
+  background-color: transparent;
+  border: none;
+  font-size: 12px;
+  letter-spacing: -0.17px;
+}
+
+@media (min-width: 560px) {
+  .list {
+    width: 540px;
+    min-height: 62px;
+    padding: 0;
+    margin-top: 24px;
+    overflow: hidden;
+  }
+
+  .summary {
+    height: 54px;
+    padding: 20px 24px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    letter-spacing: -0.19px;
+  }
+
+  .clear_btn {
+    font-size: 14px;
+    letter-spacing: -0.19px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  .clear_btn:hover {
+    @include setTheme($themes) {
+      color: themed("colorFiltersHover");
+    }
   }
 }
