--- a/src/app/components/new-task-input/new-task-input.component.html
+++ b/src/app/components/new-task-input/new-task-input.component.html
@@ -1,6 +1,6 @@
 <div class="{{theme}}">
   <div class="new_task">
-    <button class="add_button">
+    <button class="add_button" (click)="addTask()">
       <svg class="add_item" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
         <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
         <path
@@ -8,7 +8,10 @@
       </svg>
     </button>
     <label>
-      <input class="task_field" type="text" placeholder="Create a new todo...">
+      <input class="task_field" type="text" placeholder="Create a new todo..."
+             [(ngModel)]="taskNameInput"
+             (keyup.enter)="addTask()"
+      >
     </label>
   </div>
 </div>
