--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -4,6 +4,7 @@
       <button
         class="checkbox"
         [ngClass]="{'gradient' : !task.active}"
+        (click)="task.active = !task.active"
       >
         <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
           <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -20,6 +21,7 @@
     </div>
     <button
       class="task_icon"
+      (click)="deleteTask()"
     >
       <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
         <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
