--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,11 @@
     </header>
     <app-new-task-input></app-new-task-input>
     <section class="list">
-      <ul class="tasks_list" *ngFor="let task of (tasks$ | async)">
-        <app-task-item [task]="task">
+      <ul class="tasks_list" *ngFor="let task of tasks">
+        <app-task-item [task]="task"
+                       (taskDeleted)="deleteTask(task)"
+                       (taskDone)="markAsDone(task)"
+        >
         </app-task-item>
 
       </ul>
