--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -4,7 +4,7 @@
       <button
         class="checkbox"
         [ngClass]="{'gradient' : !task.active}"
-        (click)="task.active = !task.active"
+        (click)="changeTaskStatus()"
       >
         <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
           <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
