--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </header>
     <app-new-task-input></app-new-task-input>
     <section class="list">
-      <ul class="tasks_list" *ngFor="let task of tasks">
+      <ul class="tasks_list" *ngFor="let task of tasks | filter: category">
         <app-task-item [task]="task"
                        (taskDeleted)="deleteTask(task)"
                        (taskDone)="markAsDone(task)"
@@ -17,12 +17,15 @@
         </app-task-item>
 
       </ul>
+
+      <div class="summary">
+        <p class="task_counter">{{(tasks | filter: 'active').length}} items left</p>
+        <button class="clear_btn" (click)="clearCompleted()">Clear Completed</button>
+      </div>
     </section>
-    <div class="summary">
-      <p class="task_counter">items left</p>
-    </div>
-    <button class="clear_btn">Clear Completed</button>
-    <app-filters></app-filters>
+    <app-filters [category]="category"
+                 (categoryChange)="changeCategory($event)"
+    ></app-filters>
     <p class="text">Drag and drop to reorder list</p>
   </div>
 </div>
