--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,6 +24,7 @@
   @include setTheme($themes) {
     background-image: themed("backgroundImageMobile");
   }
+  background-size: cover;
   width: 100%;
   height: 200px;
   padding: 48px 24px 0;
@@ -55,6 +56,17 @@
 }
 
 @media (min-width: 560px) {
+  .background {
+    @include setTheme($themes) {
+      background-color: themed("colorBackground");
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    min-height: 100vh;
+  }
+
   .text {
     margin-top: 40px;
   }
@@ -64,7 +76,6 @@
       background-image: themed("backgroundImageDesktop");
     }
     height: 300px;
-    width: 1440px;
     padding: 70px 0 0;
     flex-direction: column;
     justify-content: initial;
@@ -91,7 +102,6 @@
 }
 
 // List
-
 
 .list {
   @include setTheme($themes) {
